# underglow

./: .pre-commit-config.yaml  .rumdl.toml  LICENSE.txt  README.md  flake.nix
doc/design/: microcontroller-comparison.md
doc/story/: getting-started.md  toolchain.md
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/underglow-fw/: Cargo.toml  memory.x
firmware/underglow-fw/src/: main.rs
prototyping/arduino_sketch/: arduino_sketch.ino
