[package]
authors = ["Kier Ada Davis <me@kierdavis.com>"]
edition = "2024"
readme = "README.md"
name = "underglow-fw"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "1.0.0"

# this lets you use `cargo fix`!
[[bin]]
name = "underglow-fw"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
