[package]
authors = ["Kier Ada Davis <me@kierdavis.com>"]
edition = "2024"
readme = "README.md"
name = "underglow-fw"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "1.0.0"

# this lets you use `cargo fix`!
[[bin]]
name = "underglow-fw"
test = false
bench = false
